fixing button too big

--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ button:hover{
     margin-bottom: 25px;
 }
 .grid3 button{
-    width: 350px;
+    width: 250px;
 }
 .grid3 button img{
     width: 13px;
